assets/css/main.css
/*hover color #ef7c69*/
/*secondary button color #474d55*/
/*secondaray hover #535a63*/

body {
  max-width: 1280px;
  margin: 0 auto !important;
  float: none !important;
}

h1, h2, h3, h4, a, b, button {
 font-family: 'Montserrat', sans-serif;;
}

p, li {
  font-family: 'Cousine', monospace;
}

td {
  padding-right: 40px;
}

/*NAV*/
.navbar-wrapper {
  position: absolute;
  top: 0; right: 0; left: 0;
  z-index: 20
}

.navbar-wrapper > .container {
  padding-right: 0;
  padding-left: 0;
}

.navbar-wrapper .navbar {
  padding-right: 15px;
  padding-left: 15px;
}

.navbar-wrapper .navbar .container {
  width: auto;
}

nav.navbar.navbar-inverse {
  background-color: #272d35;
  border: none;
  padding-left: 0;
  padding-right: 0;
}

.navbar-nav > li > a, .navbar-brand {
    padding-top:30px !important; padding-bottom:0 !important;
    height: 80px;
}

.navbar-toggle {
  margin-top:20px !important;}

.navbar-right > li > a {
  color: #407C8D;
  font-size: 20px;
}


/*.navbar {min-height:30pxr !important;}*/


.navbar-inverse .navbar-brand {
  color: black;
}

.container-fluid.nav-container {
  padding-left: 0;
}

.navbar-header {
  background-color: #e27563;
  padding-left: 15px;
}

h2.brand {
  margin-top: 0;
}

/*CONTAINER*/
.container {
  margin-bottom: 60px;
}

/*HEADER*/
.header {
  margin-top: 60px;
  margin-bottom: 60px;
  border-top: 4px solid #407C8D;
  text-align: center;
}

.header > h1 {
  margin-bottom: 20px;
}

.header > i {
  line-height: 0;
  font-size: 75px;
  color: #e27563;
}

/*ROW*/
.row {
  margin-bottom: 30px;
}

/*COL INNER*/
.row .col-inner {
  padding-top: 0;
  overflow: hidden;
}

.col-inner.image {
  max-width: 360px;
  border: 2px solid black;
  border-radius: 2px;
}
.col-inner.image > img {
  max-height: 300px;
}

.col-inner.border {
  padding-top: 15px;
  border-top: 2px solid #407C8D;
}

.col-inner .content {
  margin-top: 15px;
}

.col-inner.border .content {
  margin-top: 0;
}

/*INNER HEADER*/
.inner-header {
  padding: 0 0 15px 0;
}

.inner-header.border {
  border-bottom: 2px solid #407C8D;
}

.inner-header h2, h3 {
  margin: 0 0 0 0;
}

.inner-header > h3 {
  color: black;
}


.table-header h4 {
  margin-top: 0;
}

.grid-test {
  border: 2px solid black;
  min-height: 300px;
}

/*BANNER*/
.banner {
  position: relative;
  height: 400px;
  margin-bottom: 60px;
}

.banner > img {
  width: 100%;
  height: 400px;
}

.overlay {
  background-color: rgba(0, 0, 0, 0.6);
  position: absolute;
  min-height: 100%;
  z-index: 1;
  top: 0; right: 0; left: 0; bottom: 0;
}

.overlay-content {
  margin-top: 15%;
  text-align: center;
}

.overlay-content > h1, h3 {
  color: white;
}

/*BADGES*/

.col-inner.badges h3{
  color: black;
}

.col-inner.badges > div {
  padding-top: -20px;
  padding-bottom: -20px;
  margin-bottom: 15px;
  text-align: center;
}

.col-inner.badges img {
  height: 100px;
  margin-bottom: -11px;
}

.badges-content i, b {
  line-height: 1;
  font-size: 90px;
}

h3.badges-header {
  margin-top: 10px;
  margin-bottom: 10px;
}

.call button.btn.btn-primary {
  position: relative;
  font-size: 18px;
  padding: 26px 42px 26px 42px;
  border: none;
  border-radius: 0;
  background-color: #e27563;
}

/*ABOUT US*/

/*PRINTING*/

/*COPY SERVICES*/

/*FOOTER*/

.container-fluid.footer {
  background-color: #272d35;
}

.footer-content {
  color: white;
}

.footer .row {
  margin-top: 50px;
  height: 150px;
}

.footer h4 {
  color: #e27563;
}

.brand img {
  height: 50px;
}

.brand .col-inner {
  text-align: right;
}

.address .col-inner{

}

.contact .col-inner {
  margin-top: 10px;
}

p.design {
  color: #B0B0B0;
}

.design-container {
  text-align: center;
  margin-bottom: 20px;
}

  /* Tablet */

  @media screen and (min-width: 737px) and (max-width: 1200px) {

  }

  /* Mobile */

  @media screen and (max-width: 736px) {

  }

